Fix wrong position of rightBoxContent

--- a/app/components/paperShow/components/pdfSourceButton.scss
+++ b/app/components/paperShow/components/pdfSourceButton.scss
@@ -50,7 +50,7 @@
 }
 
 .sourceButtonTextWrapper {
-  width: 93px;
+  width: 94px;
   margin-right: 10px;
   text-align: center;
 }
